# manipulator_control_plugin

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
src/manipulator_control_plugin/: __init__.py  manipulator_plugin.py
