<?xml version="1.0"?>
<package format="2">
  <name>manipulator_control_plugin</name>
  <version>2.0.0</version>
  <description>Manipulator Control Panel</description>
  <maintainer email="contact@cjt-robotics.de">CJT-Robotics</maintainer>

  <license>TODO</license>

  <url type="website">https://cjt-robotics.de</url>
  <url type="repository">https://github.com/CJT-Robotics/manipulator_control_plugin</url>

  <author email="markus.peltsarszky@gmail.com">Markus Peltsarszky</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python_qt_binding</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>